[gd_scene load_steps=10 format=3 uid="uid://c5lpbyehh2wsy"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_bcqhp"]
[ext_resource type="AudioStream" uid="uid://wg873c066bmy" path="res://Entities/Ball/Paddle_Hit.ogg" id="2_cjvl6"]
[ext_resource type="AudioStream" uid="uid://iscpl3l3j7pg" path="res://Scenes/Gameplay/Score.ogg" id="3_x0wul"]
[ext_resource type="Texture2D" uid="uid://babdj8gc1o83f" path="res://Scenes/MainMenu/PongusMainMenu.png" id="6_dat5o"]
[ext_resource type="Texture2D" uid="uid://c1qcska832xfp" path="res://Scenes/MainMenu/Pongus_Title.png" id="7_og3fb"]
[ext_resource type="Theme" uid="uid://cnuxac3ofl1b7" path="res://Scenes/MainMenu/main_menu_theme.tres" id="8_ets42"]
[ext_resource type="PackedScene" uid="uid://beep3fm8yoa3g" path="res://Scenes/MainMenu/Button.tscn" id="9_d2ted"]
[ext_resource type="Texture2D" uid="uid://twbq7u5ro2s7" path="res://Scenes/Gameplay/GameEnvironment.png" id="10_l1uv6"]
[ext_resource type="Texture2D" uid="uid://gy0k6og4kquc" path="res://Entities/Ball/Ball_12x12.png" id="11_nqhsb"]

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcqhp")
focus_sound = ExtResource("2_cjvl6")
select_sound = ExtResource("3_x0wul")
transition_time = 3.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_dat5o")
expand_mode = 1

[node name="PongusTitle" type="Sprite2D" parent="."]
position = Vector2(400, 60)
scale = Vector2(14.9, 14.9)
texture = ExtResource("7_og3fb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.935484
anchor_right = 0.04
anchor_bottom = 0.935484
offset_top = -136.0
offset_right = 78.0
grow_vertical = 0
theme = ExtResource("8_ets42")
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="One_player" parent="VBoxContainer" instance=ExtResource("9_d2ted")]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")

[node name="Two_players" parent="VBoxContainer" instance=ExtResource("9_d2ted")]
layout_mode = 2
text = "2 Players"

[node name="Options" parent="VBoxContainer" instance=ExtResource("9_d2ted")]
visible = false
layout_mode = 2
text = "Options"

[node name="Quit" parent="VBoxContainer" instance=ExtResource("9_d2ted")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../One_player")
text = "Quit"

[node name="Game_Environment" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("10_l1uv6")
centered = false

[node name="Ball_Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("11_nqhsb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/One_player" to="." method="_on_one_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Two_players" to="." method="_on_two_players_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
